// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusButton clicking on focused button triggers unfocus action 1`] = `
{
  "payload": {
    "experimentId": "a",
  },
  "type": "cellInfo/unfocus",
}
`;

exports[`FocusButton clicking on unfocused button triggers focus action 1`] = `
{
  "payload": {
    "experimentId": "a",
    "key": "new-key",
    "store": "new-store",
  },
  "type": "cellInfo/focus",
}
`;
